# hxgen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  enhance_models.js  example.hlx  extract_hxedit_catalog.js  package-lock.json  roundtrip_test.js
.github/workflows/: release.yml
data/: models.json  template.json
examples/: 0.hlx  Accustic.hlx  Alles Luege.hlx  Basic Ritch LP.hlx  Fuer Immer.hlx  Girls Fun.hlx  Guitar Goes Bass.hlx  Halt Dich.hlx  I'm So Excited.hlx  Junimond.hlx  Koenig.hlx  Live on a Prayer.hlx  MAJOR TOM.hlx  MF Sambo Talk.hlx  Power of Love.hlx  Rio.hlx  Turn Back Time.hlx  Walk on Sunshine.hlx  basic-preset.hlx  basic-preset.json  generated-example.json
skills/hx-preset-generator/: SKILL.md
skills/hx-preset-generator/references/: MODELS.md  SPEC.md
src/: catalog.rs  generator.rs  main.rs  types.rs
